# dlm

./: .gitignore  dlm.db  pyproject.toml  setup.py  share_all_verify.py  share_web_verify.py
data/browser_profiles/dlmb_1770011141/Default/: BrowsingTopicsState  DIPS-wal  History  Preferences  Secure Preferences
dlm/: bootstrap.py  config.enc  main.py
dlm.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
dlm/app/: auto_resume.py  browser_service.py  commands.py  media_service.py  merge.py  services.py
dlm/core/: config.py  entities.py  env_validator.py  interfaces.py  repositories.py  workspace.py
dlm/extractors/: base.py  registry.py  result.py
dlm/extractors/facebook/: extractor.py  models.py
dlm/extractors/spotify/: extractor.py  models.py
dlm/extractors/tiktok/: extractor.py  models.py
dlm/extractors/torrent/: extractor.py
dlm/extractors/youtube/: extractor.py  models.py
dlm/features/: __init__.py  installer.py  models.py  registry.py  tui.py
dlm/infra/: handler.py
dlm/infra/dsl/: parser.py
dlm/infra/network/: http.py  shared_torrent.py  torrent.py
dlm/infra/persistence/: sqlite.py
dlm/interface/: aliases.py  help_manager.py  repl.py  tui.py
dlm/launcher/: cli.py  installer.py  registry.py  tui.py
dlm/share/: __init__.py  __main__.py  app.py  auth.py  cli.py  client.py  discovery.py  models.py  networking.py  picker.py  qr.py  queue.py  ranger.py  room.py  room_manager.py  server.py  tui.py
dlm/share/screens/: home_screen.py  join_screen.py  room_screen.py  sub_screens.py
dlm/sources/: detector.py  resolver.py
(+4 files in other folders)
