[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dlm"
version = "0.1.0"
authors = [
  { name="CompuMark" },
]
description = "A professional CLI/TUI Download Manager"
readme = "README.md"
requires-python = ">=3.7"
dynamic = ["dependencies", "optional-dependencies"]

[project.scripts]
dlm = "dlm.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["dlm*"]
